Fixed the table & added scrollbar

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -252,3 +252,13 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+.matrix {
+  padding: 0 20px;
+ 
+  .matrix-table {
+    overflow-x: auto;
+    display: block;
+    max-width: 100%;
+  }
+}
